src-tauri/cargo_errors_2.txt
    Checking ms-control-center v0.1.0 (C:\Users\USER\Documents\GitHub\proyectsplus\src-tauri)
warning: unused import: `Microservice`
  --> src\storage\runtime.rs:13:5
   |
13 |     Microservice, RunServiceResponse, ServiceActionIssue, ServiceActionResponse,
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `emit_dashboard_update`
  --> src\storage\mod.rs:24:18
   |
24 | pub use events::{emit_dashboard_update, start_background_ticker, RefreshConfig};
   |                  ^^^^^^^^^^^^^^^^^^^^^

error[E0597]: `ticker_config` does not live long enough
   --> src\storage\db.rs:249:29
    |
248 |         let ticker_config = app.state::<RefreshConfig>();
    |             ------------- binding `ticker_config` declared here
249 |         if let Ok(mut ms) = ticker_config.dashboard_ms.lock() {
    |                             ^^^^^^^^^^^^^--------------------
    |                             |
    |                             borrowed value does not live long enough
    |                             a temporary with access to the borrow is created here ...
...
252 |     }
    |     -
    |     |
    |     `ticker_config` dropped here while still borrowed
    |     ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `Result<std::sync::MutexGuard<'_, u64>, PoisonError<std::sync::MutexGuard<'_, u64>>>`
    |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
    |
251 |         };
    |          +

For more information about this error, try `rustc --explain E0597`.
warning: `ms-control-center` (lib) generated 2 warnings
error: could not compile `ms-control-center` (lib) due to 1 previous error; 2 warnings emitted
